--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</tbody>
 	</table>
 
-	<script src="https://cdn.easyx.cn/jquery/3.3.1/jquery-3.3.1.min.js"></script>
+	<script src="jquery-3.3.1.min.js"></script>
 	<script src="https://cdn.easyx.cn/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 	<script>
 		$(function () {
