--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<table class="table">
 		<thead>
 			<tr class="table-success">
-				<th scope="col">###</th>
+				<th scope="col" style="min-width:112px">###</th>
 				<th scope="col">收支</th>
 				<th scope="col">备注</th>
 				<th scope="col">贴</th>
@@ -24,7 +24,7 @@
 
 	<script src="jquery-3.3.1.min.js"></script>
 	<script src="https://cdn.easyx.cn/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-	<script src="site.js?a=12080"></script>
+	<script src="site.js?a=120801"></script>
 
 </body>
 </html>
