--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 
 <head>
@@ -6,16 +6,37 @@
 	<title>135雨毛球费用明细</title>
 	<link rel="stylesheet" href="https://cdn.easyx.cn/bootstrap/4.1.3/css/bootstrap.min.css" />
 	<style>
+		th, td{
+			border: 1px solid #ddd;
+			text-align: center;
+		}
+		
+		thead tr{
+			color: white;
+			background: #625955;
+		}
+		
+		tr td:first-child{
+			color: white;
+			font-weight: 700;
+			background: #625955;
+		}
 	</style>
 </head>
 <body>
+	<ul class="list-group">
+	  <li class="list-group-item list-group-item-info">公告</li>
+	  <li class="list-group-item list-group-item-light">★ 本期结束后余额算入下一期，继续入会则按照 200 - 余额/13 收取。</li>
+	  <li class="list-group-item list-group-item-light">★ 会费只进不出 <img src="h1.png" width="20"/>  <img src="h1.png" width="20"/>  <img src="h1.png" width="20"/> </li>
+	</ul>
+	<br/>
 	<table class="table">
 		<thead>
-			<tr class="table-success">
-				<th scope="col" style="min-width:112px">###</th>
-				<th scope="col">收支</th>
+			<tr>
+				<th scope="col" style="width:112px">###</th>
+				<th scope="col" style="width: 130px">收支</th>
 				<th scope="col">备注</th>
-				<th scope="col">贴</th>
+				<th scope="col" style="width: 80px">贴</th>
 			</tr>
 		</thead>
 		<tbody id="tb-body">
