--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<script src="jquery-3.3.1.min.js"></script>
 	<script src="https://cdn.easyx.cn/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-	<script src="site.js?a=frdff0"></script>
+	<script src="site.js?a=frdgff0"></script>
 
 </body>
 </html>
