--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<ul class="list-group">
 	  <li class="list-group-item list-group-item-info">公告</li>
-	  <li class="list-group-item list-group-item-light">★ 本期结束后余额算入下一期，继续入会则按照 200 - 余额/13 收取</li>
+	  <li class="list-group-item list-group-item-light">★（移除）</li>
 	  <li class="list-group-item list-group-item-light">★ 每期平均开场 20-30 场，持续入会更诱人 </li>
 	  <li class="list-group-item list-group-item-light">★ 会费只进不出 <img src="h1.png" width="20"/>  <img src="h1.png" width="20"/>  <img src="h1.png" width="20"/> </li>
 	  
